# PFOR

PFOR/: CMakeLists.txt  Compressor.h  Packer.h  benchmark.cpp  compress.cpp  decompress.cpp  main.cpp  packing.cpp  test.cpp  unpacking.cpp
bitpack/: CMakeLists.txt  benchmark.cpp  bitpacker.h  horizontal_bitpacker.cpp  main.cpp  vertical_128 copy.cpp  vertical_128.cpp  vertical_bitpacker.cpp
bitpack_compare_lemire/: CMakeLists.txt  benchmark_vertical.cpp  bitpackingaligned.cpp  simdunalignedbitpacking.cpp
